# genesis-swarm

./: README.md  TEST_DOCS.md  refactor.py  requirements.txt  scaffold_100.py  scaffold_157.py
cli-installer/: package.json
cognitive-nodes/engines/: reality_check.py
cognitive-nodes/memory/: time_crystal_builder.py
cognitive-nodes/skills/: auto_forge.py
cognitive-nodes/tests/: test_ast_parser.py  test_engines.py
core-engine/: Cargo.toml
core-engine/proto/: swarm.proto
core-engine/src/: lib.rs
core-engine/src/security/: mod.rs
core-engine/src/services/: hypervisor.rs  mod.rs  synaptic_router.rs
genesis-swarm/: EXECUTION_AUDIT.md  README.md
genesis-swarm/cognitive-nodes/: prove.py  requirements.txt
genesis-swarm/cognitive-nodes/adapters/github/: ast_parser.py
genesis-swarm/cognitive-nodes/models/: schemas.py
genesis-swarm/cognitive-nodes/tests/: test_schemas.py
genesis-swarm/core-engine/: build.rs
genesis-swarm/core-engine/src/: main.rs
genesis-swarm/core-engine/src/security/: encryption.rs  ghost_daemon.rs
genesis-swarm/core-engine/tests/: test_hypervisor.rs  test_security.rs
genesis-swarm/infrastructure/ansible/: playbook.yml
genesis-swarm/infrastructure/terraform/: main.tf
genesis-swarm/interface/: next.config.js  package.json
genesis-swarm/interface/src/: global.d.ts
genesis-swarm/interface/tests/: swarmStore.test.ts
infrastructure/docker/: Dockerfile  docker-compose.yml
interface/: tsconfig.json
interface/src/app/: layout.tsx
interface/src/store/: swarmStore.ts
interface/tests/: SwarmCanvas.test.tsx  chat.test.tsx
(+11 files in other folders)
